--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,8 @@
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "BotMan\\Studio\\Providers\\DriverServiceProvider::publishDriverConfigurations",
+            "php artisan clear-compiled",
+            "php artisan optimize",
             "chmod -R 777 public/"
         ],
         "post-update-cmd": [
