Alteração no BD: Inseridas as tabelas de imagens e correção nas relações

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,20 +2,20 @@
     "/js/app.js": "/js/app.js",
     "/css/chat.min.css": "/css/chat.min.css",
     "/css/app.css": "/css/app.css",
+    "/js/availability-calendar.js": "/js/availability-calendar.js",
     "/js/bootstrap.js": "/js/bootstrap.js",
-    "/js/vendor/bootstrap.min.js": "/js/vendor/bootstrap.min.js",
-    "/js/vendor/jquery-2.2.4.min.js": "/js/vendor/jquery-2.2.4.min.js",
-    "/js/jquery.magnific-popup.min.js": "/js/jquery.magnific-popup.min.js",
-    "/js/isotope.pkgd.min.js": "/js/isotope.pkgd.min.js",
-    "/js/botwidget.js": "/js/botwidget.js",
-    "/js/parallax.min.js": "/js/parallax.min.js",
-    "/js/owl.carousel.min.js": "/js/owl.carousel.min.js",
-    "/js/owl-carousel-thumb.min.js": "/js/owl-carousel-thumb.min.js",
-    "/js/main.js": "/js/main.js",
-    "/js/jquery.tabs.min.js": "/js/jquery.tabs.min.js",
-    "/js/jquery.sticky.js": "/js/jquery.sticky.js",
-    "/js/jquery.nice-select.min.js": "/js/jquery.nice-select.min.js",
-    "/js/jquery.ajaxchimp.min.js": "/js/jquery.ajaxchimp.min.js",
     "/js/bootstrap-datepicker.js": "/js/bootstrap-datepicker.js",
-    "/js/availability-calendar.js": "/js/availability-calendar.js"
+    "/js/botwidget.js": "/js/botwidget.js",
+    "/js/isotope.pkgd.min.js": "/js/isotope.pkgd.min.js",
+    "/js/jquery.ajaxchimp.min.js": "/js/jquery.ajaxchimp.min.js",
+    "/js/jquery.magnific-popup.min.js": "/js/jquery.magnific-popup.min.js",
+    "/js/jquery.nice-select.min.js": "/js/jquery.nice-select.min.js",
+    "/js/jquery.sticky.js": "/js/jquery.sticky.js",
+    "/js/jquery.tabs.min.js": "/js/jquery.tabs.min.js",
+    "/js/main.js": "/js/main.js",
+    "/js/owl-carousel-thumb.min.js": "/js/owl-carousel-thumb.min.js",
+    "/js/owl.carousel.min.js": "/js/owl.carousel.min.js",
+    "/js/parallax.min.js": "/js/parallax.min.js",
+    "/js/vendor/bootstrap.min.js": "/js/vendor/bootstrap.min.js",
+    "/js/vendor/jquery-2.2.4.min.js": "/js/vendor/jquery-2.2.4.min.js"
 }
