--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "jquery": "^3.2",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
+    "laravel-elixir": "^6.0.0-18",
     "vue": "^2.5.7",
     "webpack": "^4.0.0",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "botman-tinker": "^0.0.1",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "botman-tinker": "^0.0.1",
     "chartist": "^0.11.0",
     "es6-promise": "^4.2.4",
+    "laravel-mix": "^4.0.15",
     "moment": "^2.24.0",
     "vee-validate": "^2.2.0",
     "vue-clickaway": "^2.1.0",
