--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,6 +7,7 @@
     "/js/bootstrap-datepicker.js": "/js/bootstrap-datepicker.js",
     "/js/botwidget.js": "/js/botwidget.js",
     "/js/categoria.js": "/js/categoria.js",
+    "/js/dashboard.js": "/js/dashboard.js",
     "/js/index.js": "/js/index.js",
     "/js/isotope.pkgd.min.js": "/js/isotope.pkgd.min.js",
     "/js/jquery.ajaxchimp.min.js": "/js/jquery.ajaxchimp.min.js",
