Painel de Administrador

--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,17 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-dompdf": "^0.8.4",
         "botman/botman": "~2.0",
         "botman/driver-web": "~1.0",
         "botman/studio-addons": "~1.3",
         "botman/tinker": "~1.0",
         "fideloper/proxy": "^4.0",
+        "geekcom/validator-docs": "^1.5",
+        "jeroennoten/laravel-adminlte": "^1.25",
         "kreait/firebase-php": "4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "barryvdh/laravel-dompdf": "^0.8.4",
-        "geekcom/validator-docs": "^1.5",
         "reliese/laravel": "^0.0.13"
     },
     "require-dev": {
