add relação model e pagination

--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "bootstrap": "^4.0.0",
     "cross-env": "^5.1",
     "jquery": "^3.2",
+    "laravel-elixir": "^6.0.0-18",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
-    "laravel-elixir": "^6.0.0-18",
-    "vue": "^2.5.7",
-    "webpack": "^4.0.0",
     "resolve-url-loader": "^2.3.1",
-    "sass": "^1.15.2",
+    "sass": "^1.20.1",
     "sass-loader": "^7.1.0",
+    "vue": "^2.5.7",
+    "vuex": "^3.0.1",
+    "pusher-js": "^4.2.2",
     "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
@@ -32,7 +34,7 @@
     "es6-promise": "^4.2.4",
     "laravel-mix": "^4.0.15",
     "moment": "^2.24.0",
-    "vee-validate": "^2.2.0",
+    "vee-validate": "^2.2.7",
     "vue-clickaway": "^2.1.0",
     "vue-notifyjs": "^0.3.0",
     "vue-resource": "^1.5.1",
