Laravel filemanager e DB para o Chat P2P

--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,12 @@
         "geekcom/validator-docs": "^1.5",
         "jeroennoten/laravel-adminlte": "^1.25",
         "kreait/firebase-php": "4.0",
+        "laravel-frontend-presets/bulma": "^2.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "reliese/laravel": "^0.0.13"
+        "pusher/pusher-php-server": "~3.0",
+        "reliese/laravel": "^0.0.13",
+        "unisharp/laravel-filemanager": "v2.0.0-alpha8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
