comentario e component updateimagem validate email

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,6 +20,7 @@
     "/js/owl-carousel-thumb.min.js": "/js/owl-carousel-thumb.min.js",
     "/js/owl.carousel.min.js": "/js/owl.carousel.min.js",
     "/js/parallax.min.js": "/js/parallax.min.js",
+    "/js/post.js": "/js/post.js",
     "/js/register.js": "/js/register.js",
     "/js/vendor/bootstrap.min.js": "/js/vendor/bootstrap.min.js",
     "/js/vendor/jquery-2.2.4.min.js": "/js/vendor/jquery-2.2.4.min.js"
