--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "kreait/firebase-php": "4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "reliese/laravel": "^0.0.13"
+        "reliese/laravel": "^0.0.13",
+        "unisharp/laravel-filemanager": "^1.9"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
