--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "laravel/tinker": "^1.0",
         "reliese/laravel": "^0.0.13",
         "unisharp/laravel-filemanager": "^1.9",
-        "pusher/pusher-php-server": "~3.0",
-        "reliese/laravel": "^0.0.13",
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
