--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "bulma": "^0.7.2",
+        "bulma-extensions": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-elixir": "^6.0.0-18",
-        "lodash": "^4.17.11",
+        "lodash": "^4.17.4",
         "popper.js": "^1.12",
-        "pusher-js": "^4.2.2",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.7",
         "vue-template-compiler": "^2.6.10",
-        "vuex": "^3.0.1",
-        "webpack": "^4.31.0",
+        "webpack": "^4.0.0",
         "webpack-cli": "^3.3.2"
     },
     "dependencies": {
@@ -32,13 +31,16 @@
         "botman-tinker": "^0.0.1",
         "chartist": "^0.11.0",
         "es6-promise": "^4.2.4",
+        "laravel-echo": "^1.5.3",
         "laravel-mix": "^4.0.15",
         "moment": "^2.24.0",
-        "vee-validate": "^2.2.7",
+        "pusher-js": "^4.4.0",
+        "vee-validate": "^2.2.0",
         "vue-clickaway": "^2.1.0",
         "vue-notifyjs": "^0.3.0",
         "vue-resource": "^1.5.1",
         "vue-router": "^3.0.1",
+        "vue-star-rating": "^1.6.1",
         "vue2-filters": "^0.6.0"
     }
 }
