--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "laravel-frontend-presets/bulma": "^2.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "pusher/pusher-php-server": "~3.0",
         "reliese/laravel": "^0.0.13",
-        "unisharp/laravel-filemanager": "^1.9",
-        "pusher/pusher-php-server": "~3.0"
+        "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
