--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "bulma": "^0.7.2",
         "bulma-extensions": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.4.1",
         "laravel-elixir": "^6.0.0-18",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12",
+        "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "bootstrap": "^4.3.1",
         "botman-tinker": "^0.0.1",
         "chartist": "^0.11.0",
         "es6-promise": "^4.2.4",
@@ -35,7 +36,7 @@
         "laravel-mix": "^4.0.15",
         "moment": "^2.24.0",
         "pusher-js": "^4.4.0",
-        "vee-validate": "^2.2.0",
+        "vee-validate": "^2.2.7",
         "vue-clickaway": "^2.1.0",
         "vue-notifyjs": "^0.3.0",
         "vue-resource": "^1.5.1",
