mostra compra parcial

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,7 @@
     "/js/bootstrap-datepicker.js": "/js/bootstrap-datepicker.js",
     "/js/botwidget.js": "/js/botwidget.js",
     "/js/categoria.js": "/js/categoria.js",
+    "/js/compra.js": "/js/compra.js",
     "/js/conversation.js": "/js/conversation.js",
     "/js/createPost.js": "/js/createPost.js",
     "/js/dashboard.js": "/js/dashboard.js",
